--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ plugins {
 
 android {
     compileSdkVersion 32
-    buildToolsVersion "30.0.3"
+//    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "ru.iteco.fmhandroid"
@@ -45,11 +45,12 @@ android {
             buildConfigField "String", "BASE_URL", '"https://test.vhospice.org/api/fmh/"'
         }
     }
+    namespace 'ru.iteco.fmhandroid.ui'
 }
 
 dependencies {
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.0-alpha02'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.0-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     def retrofit_version = "2.9.0"
     def retrofit_gson_version = "2.9.0"
     def okhttp_logging_version = "4.9.2"
